my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.4/errors/EHOOKTYPE/T_EHOOKTYPE-struct.h.tmp
/* Generated by dmlc, do not edit! */

#ifndef T_EHOOKTYPE_STRUCT_H
#define T_EHOOKTYPE_STRUCT_H

typedef struct test test_t;

conf_class_t *_initialize_T_EHOOKTYPE(void);


#endif /* not T_EHOOKTYPE_STRUCT_H */
